--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Story-of-Germ-Life_4962
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Conn, H. W. (Herbert William)
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '1606'
     url: http://www.gutenberg.org/2009/agents/1606
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/4962#The-Story-of-Germ-Life
 gutenberg_bookshelf: Microbiology
 gutenberg_issued: '2004-01-01'
 gutenberg_type: Text
